updating the index

--- a/partials/header.html
+++ b/partials/header.html
@@ -8,14 +8,18 @@
 </a>
 <nav class="navmenu" id="navmenu">
 <ul>
-<li><a href="/ESGAGE/academique.html">Academique</a></li>
+<li class="dropdown">
+  <a href="/ESGAGE/academique.html"><span>Académique</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+  <ul>
+    <li><a href="/ESGAGE/cours.html">Cours</a></li>
+    <li><a href="/ESGAGE/programmes-specialises.html">Programmes spécialisés</a></li>
+  </ul>
+</li>
 <li><a href="/ESGAGE/athletisme.html">Sports</a></li>
-<li><a href="/ESGAGE/calendrier.html">Calendrier</a></li>
-<li><a href="/ESGAGE/nouvelles.html">Nouvelles</a></li>
+<li><a href="/ESGAGE/activite.html">Activité</a></li>
 <li><a href="/ESGAGE/personnel.html">Personnel</a></li>
 <li><a href="https://www.embroidme-oakville.com/sr/4032133">Boutique</a></li>
 <li><a href="/ESGAGE/contact.html">Contact</a></li>
-<li></li>
 </ul>
 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 </nav>
