--- a/partials/header.html
+++ b/partials/header.html
@@ -16,7 +16,7 @@
   </ul>
 </li>
 <li><a href="/ESGAGE/athletisme.html">Sports</a></li>
-<li><a href="/ESGAGE/activite.html">Activité</a></li>
+<li><a href="/ESGAGE/activite.html">Activités</a></li>
 <li><a href="/ESGAGE/calendrier.html">Calendrier</a></li>
 <li><a href="/ESGAGE/personnel.html">Personnel</a></li>
 <li><a href="https://www.embroidme-oakville.com/sr/4032133">Boutique</a></li>
